# gravitee-orbit-notes

./: .env.example  .gitignore  Deploy to EC2.command  README.md  pyproject.toml  run.py
backend/: ai_client.py  bigquery_client.py  config.py  database.py  hubspot_client.py  main.py  models.py  orbit_client.py  scheduler.py  summarizer.py
backend/routers/: admin.py  notes.py  sync.py
frontend/: index.html
