[project]
name = "orbit-notes"
version = "0.1.0"
description = "Weekly Orbit board summaries pushed to HubSpot"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
